--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ a {
     text-align: center;
     width: 300px;
     height: 400px;
-    margin: 10px ;
+    margin: 10px auto;
     padding: 20px;
     font-size: 1.2rem;
 }
